testData/AnnotatorTestData.java
public class Test {
  public static void main(String[] args) {
    System.out.println("dwp:website");
    System.out.println("dwp:key with spaces");
    System.out.println("dwp:<error descr="Unresolved property">websit"</error>);
  }
}
